--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "private": true,
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack",
+    "build": "cross-env NODE_ENV=production webpack",
+    "build-dev": "webpack",
     "watch": "webpack --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
+    "cross-env": "^7.0.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
