--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "@babel/preset-env": "^7.24.0",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
+    "mini-css-extract-plugin": "^2.8.1",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
