--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "build-dev": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
