--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
