--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
@@ -20,6 +21,7 @@
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.5.0",
+    "react-refresh": "^0.14.0",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "webpack": "^5.90.3",
