--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack serve",
+    "start": "SERVE=true webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "build-dev": "webpack",
     "watch": "webpack --watch",
